# BERDL_JupyterLab_CoreUI

./: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  pr-prerelease.yml  release-assets.yml  release-wheel.yml
berdl_jupyterlab_coreui/: __init__.py  handlers.py
jupyter-config/server-config/: berdl_jupyterlab_coreui.json
src/: constants.ts  debug.ts  index.ts  tokenExpiration.ts  types.ts
src/__tests__/: berdl_jupyterlab_coreui.spec.ts
src/api/: authApi.ts
src/components/: ProfileWidget.tsx  TokenMonitor.tsx
src/components/dialogs/: BlockingDialogContent.tsx  ChangeProfileDialogContent.tsx  NoTokenDialogContent.tsx  WarningDialogContent.tsx  index.ts
src/hooks/: useTokenQuery.ts
src/utils/: auth.ts  dialogUtils.tsx  jupyterhub.ts
style/: base.css  index.js
ui-tests/: package.json
ui-tests/tests/: berdl_jupyterlab_coreui.spec.ts
